--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
+/LC2_GUI/nbproject/private/
