Updated config.properties file

--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -1,3 +1,8 @@
 stationGLN=1234567890124
 stationBezeichnung=Station
-barcodePrinter="Datamax 4400"
+barcodePrinterSSCC="Datamax 4400"
+barcodePrinterDataMatrix="Datamax 4400"
+bartenderLabelTemplateSSCC="\\\\psf\\Home\\Desktop\\Bachelorthesis\\Etikette_100x150.btw"
+bartenderLabelTemplateDataMatrix="\\\\psf\\Home\\Desktop\\Bachelorthesis\\Etikette_60x20.btw"
+triggerTextFileNameSSCC="\\\\psf\\Home\\Desktop\\Bachelorthesis\\TriggerTextSSCC.txt"
+triggerTextFileNameDataMatrix="\\\\psf\\Home\\Desktop\\Bachelorthesis\\TriggerTextDataMatrix.txt"
