Updated config.properties file (lieferschein)

--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -2,7 +2,10 @@ stationGLN=1234567890124
 stationBezeichnung=Station
 barcodePrinterSSCC="Datamax 4400"
 barcodePrinterDataMatrix="Datamax 4400"
+barcodePrinterLieferschein="Print to PDF (Mac Desktop)"
 bartenderLabelTemplateSSCC="\\\\psf\\Home\\Desktop\\Bachelorthesis\\Etikette_100x150.btw"
 bartenderLabelTemplateDataMatrix="\\\\psf\\Home\\Desktop\\Bachelorthesis\\Etikette_60x20.btw"
+bartenderLabelTemplateLieferschein="\\\\psf\\Home\\Desktop\\Bachelorthesis\\Lieferschein.btw"
 triggerTextFileNameSSCC="\\\\psf\\Home\\Desktop\\Bachelorthesis\\TriggerTextSSCC.txt"
 triggerTextFileNameDataMatrix="\\\\psf\\Home\\Desktop\\Bachelorthesis\\TriggerTextDataMatrix.txt"
+triggerTextFileNameLieferschein="\\\\psf\\Home\\Desktop\\Bachelorthesis\\TriggerTextLieferschein.txt"
