Order with GLNs (config.properties)

--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -1,4 +1,5 @@
 stationGLN=1234567890124
+manufacturerGLN=1234567890125
 stationBezeichnung=Station
 barcodePrinterSSCC="Datamax 4400"
 barcodePrinterDataMatrix="Datamax 4400"
