--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -1,12 +1,12 @@
 stationGLN=7640166731078
 manufacturerGLN=7601001010703
-stationBezeichnung=Station
-barcodePrinterSSCC=TSC TDP-245 Plus (Kopie 1)
-barcodePrinterDataMatrix=TSC TDP-245 Plus
-barcodePrinterLieferschein=Print to PDF (Mac Desktop)
-bartenderLabelTemplateSSCC=\\\\psf\\Home\\Desktop\\TriggerFolder\\Etikette_100x150.btw
-bartenderLabelTemplateDataMatrix=\\\\psf\\Home\\Desktop\\TriggerFolder\\Etikette_60x20.btw
-bartenderLabelTemplateLieferschein=\\\\psf\\Home\\Desktop\\TriggerFolder\\Lieferschein.btw
-triggerTextFileNameSSCC=/Users/ph/Desktop/TriggerTextSSCC.txt
-triggerTextFileNameDataMatrix=/Users/ph/Desktop/TriggerTextDataMatrix.txt
-triggerTextFileNameLieferschein=/Users/ph/Desktop/TriggerTextLieferschein.txt
+stationBezeichnung=Hersteller
+barcodePrinterSSCC=Shipment Printer
+barcodePrinterDataMatrix=Production Printer
+barcodePrinterLieferschein=PDFCreator
+bartenderLabelTemplateSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_100x150.btw
+bartenderLabelTemplateDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_60x20.btw
+bartenderLabelTemplateLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\Lieferschein.btw
+triggerTextFileNameSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextSSCC.txt
+triggerTextFileNameDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextDataMatrix.txt
+triggerTextFileNameLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextLieferschein.txt
