--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -10,3 +10,5 @@ bartenderLabelTemplateLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder
 triggerTextFileNameSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextSSCC.txt
 triggerTextFileNameDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextDataMatrix.txt
 triggerTextFileNameLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextLieferschein.txt
+lieferscheinFolder=/Users/ph/Desktop/pdfs/
+
