--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -2,13 +2,13 @@ stationGLN=7640166731078
 manufacturerGLN=7601001010703
 stationBezeichnung=Hersteller
 barcodePrinterSSCC=Shipment Printer
-barcodePrinterDataMatrix=Production Printer
-barcodePrinterLieferschein=PDFCreator
+barcodePrinterDataMatrix=TSC TDP-245 Plus
+barcodePrinterLieferschein=Bullzip PDF Printer
 bartenderLabelTemplateSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_100x150.btw
 bartenderLabelTemplateDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_60x20.btw
 bartenderLabelTemplateLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\Lieferschein.btw
 triggerTextFileNameSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextSSCC.txt
 triggerTextFileNameDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextDataMatrix.txt
 triggerTextFileNameLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextLieferschein.txt
-lieferscheinFolder=/Users/ph/Desktop/pdfs/
+lieferscheinFolder=C:\\Users\\Production\\Desktop\\TriggerFolder\\Lieferscheine\\
 
