--- a/MediPrep/src/resources/config.properties
+++ b/MediPrep/src/resources/config.properties
@@ -1,12 +1,3 @@
 stationGLN=7640166731078
 manufacturerGLN=7601001010703
-stationBezeichnung=Hersteller
-barcodePrinterSSCC=Shipment Printer
-barcodePrinterDataMatrix=Production Printer
-barcodePrinterLieferschein=PDFCreator
-bartenderLabelTemplateSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_100x150.btw
-bartenderLabelTemplateDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_60x20.btw
-bartenderLabelTemplateLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\Lieferschein.btw
-triggerTextFileNameSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextSSCC.txt
-triggerTextFileNameDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextDataMatrix.txt
-triggerTextFileNameLieferschein=C:\\Users\\Production\\Desktop\\TriggerFolder\\TriggerTextLieferschein.txt
+stationBezeichnung=Station A
