changed due to new printers

--- a/Client/src/resources/config.properties
+++ b/Client/src/resources/config.properties
@@ -1,8 +1,8 @@
 stationGLN=7640166731078
 manufacturerGLN=7601001010703
 stationBezeichnung=Hersteller
-barcodePrinterSSCC=Shipment Printer
-barcodePrinterDataMatrix=TSC TDP-245 Plus
+barcodePrinterSSCC=Shipment
+barcodePrinterDataMatrix=Product
 barcodePrinterLieferschein=Bullzip PDF Printer
 bartenderLabelTemplateSSCC=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_100x150.btw
 bartenderLabelTemplateDataMatrix=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_60x20.btw
