--- a/MediPrep/resources/config.properties
+++ b/MediPrep/resources/config.properties
@@ -1,3 +1,3 @@
 stationGLN=7640166731078
-stationBezeichnung="Station A"
-printerName="Brother QL-700"
+stationBezeichnung=Station A
+printerName=Brother QL-700
