mediprep improvements to enable file writing on windows

--- a/MediPrep/resources/config.properties
+++ b/MediPrep/resources/config.properties
@@ -1,3 +1,5 @@
 stationGLN=7640166731078
 stationBezeichnung=Station A
 printerName=Brother QL-700
+#PrescLabelPath=C:\\Users\\Production\\Desktop\\TriggerFolder\\Etikette_100x150.btw
+PrescLabelPath=
